# garmin-workout-push

./: .gitignore  CLAUDE.md  LICENSE  README.md  garmin-workout-push-spec.md  pyproject.toml
examples/: 3x3k.yaml  tempo-16k.yaml
src/garmin_workout_push/: __init__.py  builder.py  cli.py  client.py  exceptions.py  loader.py  model.py
tests/: test_builder.py  test_cli.py  test_client.py  test_loader.py
